--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
+  country_code_picker: ^2.0.2
+  flutter_svg: ^0.23.0+1
+  keyboard_dismisser: ^2.0.0
+  badges: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
